[FIXED] fixed contentType issue on JRE11